Second Commit Some Code Update

--- a/LibAuto_CleanArch/LibAuto_CleanArch/App.config
+++ b/LibAuto_CleanArch/LibAuto_CleanArch/App.config
@@ -14,7 +14,7 @@
   </entityFramework>
 	<connectionStrings>
 		<add name="Context"
-			 connectionString="Server=DESKTOP-HGGVOAC\SQLEXPRESS;Database=LibraryDB;Trusted_Connection=True;"
+			 connectionString="Server=DESKTOP-HGGVOAC\SQLEXPRESS;Database=NewLibraryDB;Trusted_Connection=True;"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
