--- a/LibAuto_CleanArch/LibAuto_CleanArch/LibAuto_CleanArch.csproj
+++ b/LibAuto_CleanArch/LibAuto_CleanArch/LibAuto_CleanArch.csproj
@@ -58,17 +58,49 @@
   <ItemGroup>
     <Compile Include="Context\Context.cs" />
     <Compile Include="Entity\Book.cs" />
+    <Compile Include="Entity\Employee.cs" />
     <Compile Include="Entity\Loan.cs" />
     <Compile Include="Entity\Member.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Migrations\202507261143311_InitialCreate.cs" />
+    <Compile Include="Migrations\202507261143311_InitialCreate.Designer.cs">
+      <DependentUpon>202507261143311_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Forms\EmployeeBookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\EmployeeBookForm.Designer.cs">
+      <DependentUpon>EmployeeBookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Forms\LoanForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\LoanForm.Designer.cs">
+      <DependentUpon>LoanForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Forms\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Forms\MemberBookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\MemberBookForm.Designer.cs">
+      <DependentUpon>MemberBookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Forms\MemberForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Forms\MemberForm.Designer.cs">
+      <DependentUpon>MemberForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Migrations\202507261143311_InitialCreate.resx">
+      <DependentUpon>202507261143311_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -78,6 +110,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\Forms\EmployeeBookForm.resx">
+      <DependentUpon>EmployeeBookForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Forms\LoanForm.resx">
+      <DependentUpon>LoanForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Forms\MemberBookForm.resx">
+      <DependentUpon>MemberBookForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
